--- a/css/main.css
+++ b/css/main.css
@@ -68,17 +68,19 @@ people-list {
   float: left;
 }
 .people-list .search {
-  padding: 20px;
+  margin-top: 10px;
 }
+
 .people-list input {
-  border-radius: 3px;
+  /*border-radius: 3px;
   border: none;
   padding: 14px;
   color: white;
   background: #6A6C75;
-  width: 90%;
-  font-size: 14px;
+  width: 100%;
+  font-size: 14px;*/
 }
+
 .people-list .fa-search {
   position: relative;
   left: -25px;
@@ -92,6 +94,7 @@ people-list {
 }
 .people-list img {
   float: left;
+  border-radius: 50%;
 }
 .people-list .about {
   float: left;
@@ -99,6 +102,8 @@ people-list {
 }
 .people-list .about {
   padding-left: 8px;
+  margin-top: 20px;
+  font-size: 21px;
 }
 .people-list .status {
   color: #92959E;
@@ -117,4 +122,8 @@ people-list {
 
 .offline {
   color: #E38968;
+}
+
+.clearfix{
+    margin-bottom: 10px;
 }
