--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@
     border-radius: 0.2em;
     font-size: 16px;
     color: #FFF;
+    background: #E74B37;
   }
   .loginBtn:before {
     content: "";
