--- a/css/stylethread.css
+++ b/css/stylethread.css
@@ -67,20 +67,27 @@ body {
   color: #434651;
 }
 .chat .chat-header {
+  position: fixed;
   padding: 20px;
-  border-bottom: 2px solid white;
+  width: 100%;
+  background: #343a40;
+  color: #fff;
+  z-index: 1;
 }
 .chat .chat-header img {
   float: left;
+  border-radius: 50%;
+  max-width: 45px;
 }
 .chat .chat-header .chat-about {
   float: left;
   padding-left: 10px;
-  margin-top: 6px;
+  margin-top: 18px;
 }
 .chat .chat-header .chat-with {
   font-weight: bold;
   font-size: 16px;
+  margin-top: -6px;
 }
 .chat .chat-header .chat-num-messages {
   color: #92959E;
@@ -95,7 +102,8 @@ body {
   padding: 30px 30px 20px;
   border-bottom: 2px solid white;
   overflow-y: scroll;
-  height: 575px;
+  margin-top: 80px;
+  background-color: #fff;
 }
 .chat .chat-history .message-data {
   margin-bottom: 15px;
@@ -137,9 +145,12 @@ body {
   border-bottom-color: #94C2ED;
   left: 93%;
 }
+
 .chat .chat-message {
-  padding: 30px;
+    position: absolute;
+    bottom: 0;
 }
+
 .chat .chat-message textarea {
   width: 100%;
   border: none;
